Improving ImageColorPicker interface

--- a/TCC/res/layout/image_color_picker.xml
+++ b/TCC/res/layout/image_color_picker.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:layout_marginBottom="5dp"
-    android:layout_marginTop="5dp" >
+    android:layout_marginTop="5dp"
+    android:orientation="vertical"
+    android:gravity="center_horizontal" >
 
     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
         android:text="@string/pick_color"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
@@ -18,8 +18,6 @@
         android:id="@+id/image_selected_color"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_below="@+id/textView1"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="5dp"
         android:contentDescription="@string/selected_color_sample" />
 
@@ -27,10 +25,7 @@
         android:id="@+id/image_for_selection"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-   	    android:layout_marginBottom="5dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="20dp"
         android:contentDescription="@string/image" />
-    
-</RelativeLayout>
+
+</LinearLayout>
