--- a/TCC/res/layout/image_color_picker.xml
+++ b/TCC/res/layout/image_color_picker.xml
@@ -4,8 +4,8 @@
     android:layout_height="fill_parent"
     android:layout_marginBottom="5dp"
     android:layout_marginTop="5dp"
-    android:orientation="vertical"
-    android:gravity="center_horizontal" >
+    android:gravity="center_horizontal"
+    android:orientation="vertical" >
 
     <TextView
         android:id="@+id/textView1"
