--- a/TCC/res/layout/settings.xml
+++ b/TCC/res/layout/settings.xml
@@ -2,10 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical"
+    android:layout_marginBottom="10dp"
     android:layout_marginTop="10dp"
-    android:layout_marginBottom="10dp" >
+    android:gravity="center"
+    android:orientation="vertical" >
 
     <LinearLayout
         android:layout_width="match_parent"
