--- a/TCC/res/layout/filter_activity_landscape.xml
+++ b/TCC/res/layout/filter_activity_landscape.xml
@@ -2,8 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginBottom="10dp"
-    android:layout_marginTop="10dp"
+    android:background="@color/abs__background_holo_dark"
     android:baselineAligned="false"
     android:gravity="center_horizontal"
     android:orientation="vertical" >
@@ -12,6 +11,7 @@
         android:id="@+id/filter_type_spinner_ll"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:gravity="center_horizontal"
         android:orientation="vertical"
         android:visibility="gone" >
