--- a/TCC/res/layout/filter_activity_portrait.xml
+++ b/TCC/res/layout/filter_activity_portrait.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:layout_marginBottom="10dp"
-    android:layout_marginTop="10dp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/abs__background_holo_dark"
     android:gravity="center_horizontal"
     android:orientation="vertical" >
 
     <LinearLayout
         android:id="@+id/filter_type_spinner_ll"
         android:layout_width="fill_parent"
+        android:layout_marginTop="10dp"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:orientation="vertical"
