--- a/TCC/res/layout/main_portrait.xml
+++ b/TCC/res/layout/main_portrait.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:baselineAligned="false"
+    android:background="@color/abs__background_holo_dark"
     android:orientation="horizontal" >
 
     <LinearLayout
