--- a/TCC/res/layout/settings.xml
+++ b/TCC/res/layout/settings.xml
@@ -2,8 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginBottom="5dp"
-    android:layout_marginTop="5dp"
+    android:background="@color/abs__background_holo_dark"
     android:gravity="center"
     android:orientation="vertical" >
 
@@ -130,8 +129,8 @@
             android:id="@+id/textView7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/default_color"
             android:layout_marginRight="5dp"
+            android:text="@string/default_color"
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
         <ImageButton
