--- a/TCC/res/layout/settings_color_picker.xml
+++ b/TCC/res/layout/settings_color_picker.xml
@@ -2,8 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:layout_marginBottom="10dp"
-    android:layout_marginTop="10dp"
+    android:background="@color/abs__background_holo_dark"
     android:gravity="center"
     android:orientation="vertical" >
 
